	(authors-ambiguous-files): New list.
	(authors-valid-file-names): Add some deleted files.
	(authors-renamed-files-alist): Add font-setting.el, edt-user.doc.
	(authors-disambiguate-file-name): New function.  (Bug#5501)
	(authors-canonical-file-name): Doc fix.
	Don't warn about obsolete files.
	(authors-canonical-file-name, authors-scan-el):
	Use authors-disambiguate-file-name.

2010-04-23  Stefan Monnier  <monnier@iro.umontreal.ca>

	* emacs-lisp/bytecomp.el (byte-compile-set-default): New function.
	(byte-compile-setq-default): Optimize for the
	single-var case and don't call byte-compile-form in this case to avoid
	inf-loop with byte-compile-set-default.

	* progmodes/compile.el (compilation-start): Abbreviate default directory.

2010-04-23  Michael Albinus  <michael.albinus@gmx.de>

	Implement SELINUX backends.

	* net/tramp.el (tramp-file-name-handler-alist):
	Add `file-selinux-context' and `set-file-selinux-context'.
	(tramp-handle-file-selinux-context)
	(tramp-handle-set-file-selinux-context): New defuns.
	(tramp-handle-copy-file, tramp-do-copy-or-rename-file):
	Handle PRESERVE-SELINUX-CONTEXT.

	* net/tramp-gvfs.el (tramp-gvfs-file-name-handler-alist):
	Add `file-selinux-context' and `set-file-selinux-context'.
	(tramp-gvfs-handle-file-selinux-context)
	(tramp-gvfs-handle-set-file-selinux-context): New defuns.
	(tramp-gvfs-handle-copy-file): Handle PRESERVE-SELINUX-CONTEXT.

	* net/ange-ftp.el (ange-ftp-copy-file):
	* net/tramp-fish.el (tramp-fish-handle-copy-file):
	* net/tramp-imap.el (tramp-imap-handle-copy-file):
	* net/tramp-smb.el (tramp-smb-handle-copy-file):
	Add PRESERVE-SELINUX-CONTEXT.

2010-04-22  Michael Albinus  <michael.albinus@gmx.de>

	Synchronize with Tramp repository.

	* net/tramp.el (with-connection-property, tramp-completion-mode-p)
	(tramp-action-process-alive, tramp-action-out-of-band)
	(tramp-check-for-regexp, tramp-file-name-p, tramp-equal-remote)
	(tramp-exists-file-name-handler): Fix docstring.